--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,204 @@
+@import url("https://fonts.googleapis.com/css2?family=Gotu&display=swap");
+/*----------------------------*\
+ #CUSTOM PROPERTY
+\*----------------------------*/
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  /* colors */
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* typography */
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --ff-gotu: "Gotu", sans-serif;
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  /* spacing */
+  --section-padding: 40px;
+
+  /* radius */
+  --radius-4: 4px;
+  --radius-6: 6px;
+
+  /* transition */
+  --transition-1: 0.05s ease;
+  --transition-2: 0.25s ease;
+  --cubic-in: cubic-bezier(0.51, 0.03, 0.64, 0.28);
+  --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/*-----------------------------------*\
+  #RESET
+\*-----------------------------------*/
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+*,
+*::before,
+*::after {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+li {
+  list-style: none;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+a,
+img,
+span,
+input,
+label,
+button,
+ion-icon {
+  display: block;
+}
+
+img {
+  height: auto;
+}
+
+input,
+button {
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+input {
+  width: 100%;
+}
+
+button {
+  cursor: pointer;
+}
+
+ion-icon {
+  pointer-events: none;
+}
+
+address {
+  font-style: normal;
+}
+
+:focus-visible {
+  outline-offset: 4px;
+}
+
+::selection {
+  background-color: var(--black_98);
+  color: var(--white);
+}
+
+html {
+  font-size: 14px;
+  font-family: var(--ff-gotu);
+  scroll-behavior: smooth;
+}
+
+/* body {
+  font-size: 1.14rem;
+  background-color: #f2f2f2 !important;
+  color: black;
+} */
+
+/*-----------------------------------*\
+  #REUSED STYLE
+\*-----------------------------------*/
+
+.container {
+  padding-inline: 15px;
+}
+
+/* Buttons */
+
+.section {
+  padding-block: var(--section-padding);
+}
+
+.h3 {
+  font-family: var(--ff-fauna);
+  font-size: var(--fs-4);
+}
+
+.h2 {
+  font-size: var(--fs-1);
+  font-weight: var(--fw-500);
+  color: var(--dark-blue);
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.has-scrollbar {
+  display: flex;
+  overflow-x: scroll;
+  padding-block-end: 30px;
+  margin-block-end: -30px;
+  scroll-snap-type: inline mandatory;
+}
+
+.has-scrollbar::-webkit-scrollbar {
+  height: 10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 15px;
+}
+
+.has-scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: var(--black_97);
+}
+
+@media (min-width: 569px) {
+  /*-----------------------------------*\
+  #REUSED STYLE
+  \*-----------------------------------*/
+
+  .container {
+    max-width: 520px;
+    margin-inline: auto;
   }
+}
+
+@media (min-width: 768px) {
+  /*-----------------------------------*\
+  #REUSED STYLE
+  \*-----------------------------------*/
+
+  .container {
+    max-width: 700px;
+  }
+}
+
+@media (min-width: 992px) {
+  /*-----------------------------------*\
+  #REUSED STYLE
+  \*-----------------------------------*/
+
+  .container {
+    padding-inline: 40px;
+    max-width: 1020px;
+  }
+}
+
+@media (min-width: 1200px) {
+  /*-----------------------------------*\
+  #REUSED STYLE
+  \*-----------------------------------*/
+
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 992px) {
 }
