--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,11 @@
   --info: #3366ff;
   --warning: #ffb020;
   --danger: #ff000d;
+  --white: #fff;
+  --black: #000;
+  --bg-1: #0c2334;
+
+  --gradient-1: linear-gradient(90deg, #0b2233 0%, #006180 102.81%);
 
   /* typography */
 
