--- a/src/components/web/header/header.module.css
+++ b/src/components/web/header/header.module.css
@@ -17,10 +17,21 @@
   padding: 11px 0;
 }
 
+.dateContainer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .date {
   font-weight: var(--fw-400);
   font-size: 14px;
   line-height: 20px;
+}
+
+.dateIcon {
+  font-size: 20px;
+  margin-top: -4px;
 }
 
 .category {
