--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,7 @@
   --white: #fff;
   --black: #000;
   --bg-1: #0c2334;
+  --black_1: #242424;
 
   --gradient-1: linear-gradient(90deg, #0b2233 0%, #006180 102.81%);
 
