--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Gotu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 /*----------------------------*\
  #CUSTOM PROPERTY
 \*----------------------------*/
@@ -20,6 +21,7 @@
   --black_2: #1c1b1f;
   --black_3: #353535;
   --gray: #cacaca;
+  --gray_1: #7c7c7c;
   --blue: #0679ab;
 
   --gradient-1: linear-gradient(90deg, #0b2233 0%, #006180 102.81%);
@@ -27,6 +29,7 @@
   /* typography */
 
   --ff-gotu: "Gotu", sans-serif;
+  --ff-poppins: "Poppins", sans-serif;
 
   --fw-400: 400;
   --fw-500: 500;
@@ -174,6 +177,20 @@ html {
 
 .has-scrollbar:hover::-webkit-scrollbar-thumb {
   background-color: var(--black_97);
+}
+
+.section-title {
+  font-size: 24px;
+  font-weight: var(--fw-400);
+  line-height: 40px;
+  color: var(--black_1);
+}
+.section-subtitle {
+  font-size: 13px;
+  font-weight: var(--fw-400);
+  line-height: 24px;
+  color: var(--gray_1);
+  font-family: var(--ff-poppins);
 }
 
 @media (min-width: 569px) {
