--- a/src/sections/web/home/advertisement/advertisement.module.css
+++ b/src/sections/web/home/advertisement/advertisement.module.css
@@ -2,7 +2,7 @@
   padding: var(--section-padding) 0;
 }
 
-.firstads {
+.firstAds {
   height: 140px;
   background-color: #e8e8e8;
   color: #7c7c7c;
