--- a/src/components/admin/sidebar/sidebar.module.css
+++ b/src/components/admin/sidebar/sidebar.module.css
@@ -1,12 +1,7 @@
-.menu {
-  border-inline-end: none !important;
+.container {
+  color: var(--white);
 }
 
-.title {
-  height: 64px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 0 28px;
-  margin-bottom: 20px;
+.icon {
+  color: var(--white);
 }
