Adds line clamp in card description

--- a/src/components/web/card/card.module.css
+++ b/src/components/web/card/card.module.css
@@ -62,6 +62,13 @@
   color: var(--black_3);
 }
 
+.description{
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
+}
+
 @media (min-width: 767px) {
   .imageContainer {
     height: 156px;
