--- a/src/sections/web/home/healthcare/healthcare.module.css
+++ b/src/sections/web/home/healthcare/healthcare.module.css
@@ -15,19 +15,17 @@
   gap: 19px;
 }
 .dateContainer {
-
   display: flex;
   gap: 4px;
   align-items: center;
 }
-.categoryContainer
-{
+.categoryContainer {
   display: flex;
   justify-content: start;
   gap: 6px;
   align-items: center;
 }
- .category {
+.category {
   background-color: var(--info);
   color: var(--white);
   padding: 2px 12px;
@@ -36,10 +34,7 @@
   height: 18px;
   margin-bottom: 10px;
   font-weight: var(--fw-400);
-
 }
-
-
 
 .title {
   font-weight: var(--fw-600);
@@ -51,28 +46,28 @@
   font-size: 10px;
   font-weight: var(--fw-400);
   line-height: 24px;
-  font-family:var(--ff-poppins);
+  font-family: var(--ff-poppins);
 }
 .icon {
-    color: var(--gray_1);
-    font-size: 10px;
-    font-weight: var(--fw-400);
-    line-height: 24px;
-    margin-top: -2px;
+  color: var(--gray_1);
+  font-size: 10px;
+  font-weight: var(--fw-400);
+  line-height: 24px;
+  margin-top: -2px;
+}
+
+@media (min-width: 767px) {
+  .healthGrid {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 36px;
   }
-  
-  @media (min-width: 767px) {
-    .healthGrid {
-      grid-template-columns: 1fr 1fr 1fr;
-      gap: 36px;
-    }
-    .title{
-        line-height: 22px;
-    }
+  .title {
+    line-height: 22px;
   }
-  
-  @media (min-width: 992px) {
-    .healthGrid {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-      }
+}
+
+@media (min-width: 992px) {
+  .healthGrid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+}
